# acapy-plugins

.github/workflows/: create-release-pr.yaml  pr-integration-tests.yaml
basicmessage_storage/: pyproject.toml
cache_redis/: pyproject.toml
cheqd/: pyproject.toml
cheqd/cheqd/: __init__.py  routes.py
cheqd/cheqd/anoncreds/: registry.py
cheqd/cheqd/anoncreds/tests/: test_registry.py
cheqd/cheqd/did/: base.py  helpers.py  manager.py  registrar.py
cheqd/cheqd/did/tests/: conftest.py  mocks.py  test_base.py  test_manager.py  test_registrar.py
cheqd/cheqd/resolver/: resolver.py
cheqd/docker/: Dockerfile
cheqd/integration/: Dockerfile.test.runner  docker-compose.yml  pyproject.toml
cheqd/integration/tests/: test_example.py
connection_update/: pyproject.toml
connections/: pyproject.toml
connections/integration/: Dockerfile.test.runner
firebase_push_notifications/: pyproject.toml
hedera/: pyproject.toml
kafka_events/: pyproject.toml
kafka_events/integration/: pyproject.toml
multitenant_provider/: pyproject.toml
multitenant_provider/integration/: pyproject.toml
nats_events/: pyproject.toml
nats_events/nats_events/v1_0/nats_queue/: config.py
nats_events/nats_events/v1_0/nats_queue/events/: __init__.py
nats_events/nats_events/v1_0/nats_queue/tests/: test_events.py
oid4vc/: pyproject.toml
plugin_globals/: pyproject.toml
plugin_globals/integration/: pyproject.toml
redis_events/: pyproject.toml
redis_events/docker/services/: pyproject.toml
redis_events/integration/: Dockerfile  pyproject.toml
rpc/: pyproject.toml
webvh/: pyproject.toml
