[tool.poetry]
name = "nats_events"
version = "0.1.0"
description = "ACA-PY persisted events using NATS"
authors = ["Mourits de Beer <ff137@proton.me>"]

[tool.poetry.dependencies]
python = "^3.12"

# Define ACA-Py as an optional/extra dependency so it can be
# explicitly installed with the plugin if desired.
acapy-agent-didx = { version = ">=1.4.0.post20251118", source = "testpypi", optional = true }
aiohttp = "^3.9.10"
pydantic = "^2.7"
uvicorn = "^0.38.0"
nats-py = { git = "https://github.com/ff137/nats.py", tag = "v2.10.0-w-orjson", extras = [
    "nkeys",
    "orjson",
    "uuid_utils",
] }
orjson = "^3.10.7"

[tool.poetry.extras]
aca-py = ["acapy-agent-didx"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-ruff = "^0.5.0"
pre-commit = "^4.4.0"
rope = "^1.13.0"

[tool.poetry.group.integration.dependencies]
aries-askar = ">=0.4.2"
indy-credx = { version = "~1.1.1" }
indy-vdr = { version = "~0.4.1" }
ursa-bbs-signatures = { version = "~1.0.1" }
python3-indy = { version = "^1.11.1" }
anoncreds = { version = "^0.2.0" }

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "D"]
ignore = [
    # Google Python Doc Style
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D401",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
    # Things that we should fix, but are too much work right now
    "D417",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]

[tool.pytest.ini_options]
testpaths = "nats_events"
addopts = """
    -p no:warnings
    --quiet --junitxml=./.test-reports/junit.xml
    --cov-config .coveragerc --cov=nats_events --cov-report term --cov-report xml
"""
markers = []
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["*/tests/*", "docker/*", "integration/*", "*/definition.py"]
data_file = ".test-reports/.coverage"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract"]
precision = 2
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = ".test-reports/coverage.xml"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
